system/assets/stylesheets/wstm/partials/_dialog.sass
.ui-dialog-shadow
  box-shadow: 0.5em 0.5em #3e3e3e
.ui-widget-overlay
  background-color: #ff0000 !important
  background-image: none !important
.ui-tabs .ui-tabs-nav li a
  padding: 0.3em 0.7em !important
.select2-results .select2-result-label
  padding: 0px 7px !important
  white-space: pre
.select2-container-multi .select2-choices .select2-search-field
  input
    font-size: 110% !important
.ui-datepicker
  font-size: 1em !important
#date_show
  padding: 3px
ul.trst-ui-sortable
  border-radius: 5px
  background-color: #f0f0f0
  border: 1px solid #f5f5f5
  list-style-type: none
  margin: 0
  padding: 0 0 2.0em
  float: left
  li
    margin: 0 3px
    padding: 0 1.0em
    cursor: e-resize
  span.relation-title
    border-bottom: 1px solid #f5f5f5
    padding: 0.25em 0.5em 0.5em
    display: block
    min-width: 180px
#deskDialog, #loginDialog, #downloadDialog
  .icon-only
    .ui-button-text
      padding: 0 !important
  .ui-button-text
    padding: 0.2em 1em 0.2em 2.1em !important
  select
    font-family: Arial, sans-serif
  table
    border-collapse: collapse
    font-size: 0.9em
    width: 100%
    td
      vertical-align: baseline
    thead
      tr.pdb-05
        td
          padding-bottom: 0.5em
    tbody
      tr
        &.pdb-05
          td
            padding-bottom: 0.5em
        td
          &.select-freight
            width: 1px
          &.action-1
            color: red
            font-size: 1.15em
            text-align: center
            width: 20px
            span
              cursor: pointer
          &.buttonset
            padding-left: 8px
          input[type="text"], input[type="password"]
            width: 100%
          input.before-yes
            margin-left: 3em
            display: inline-block
            &:before
              display: inline-block
              text-indent: -1.6em
              content: "Da"
          input.before-no
            margin-left: 3em
            display: inline-block
            &:before
              display: inline-block
              text-indent: -1.6em
              content: "Nu"
          input.um, input.pu, input.qu, input.quw
            text-align: right
            font-weight: bolder
          input.um
            text-align: center
            width: 30px
          input.pu
            width: 40px
          input.qu
            width: 60px
          input.quw
            width: 80px
          span
            &.name, &.um, &.pu, &.qu, &.val, &.p03, &.p16, &.res
              display: inline-block
              font-weight: bolder
              text-align: right
              padding: 0px 5px
            &.name
              text-align: left
            &.um
              text-align: center
              width: 30px
              padding: 0px
            &.pu
              width: 40px
              float: right
            &.qu, &.val, &.p03, &.p16, &.res
              float: right
              min-width: 40px
          span.label
            padding-right: 5px
          span.value
            display: block
            padding: 3px 0 3px 10px
            max-width: 700px
          span.value-input
            display: block
            padding: 1px 5px
            max-width: 700px
          span.error
            padding-left: 5px
            color: #ff0000
    tbody.inner
      border:
        style: solid
        color: rgba(62, 62, 62, 1)
        width: 1px
      tr
        &:nth-child(2)
          td
            border-top: solid 1px rgba(62, 62, 62, 1)
        &:nth-child(odd)
          background-color: rgba(210, 210, 210, 1)
        &:last-child
          td
            border-top: solid 1px rgba(62, 62, 62, 1)
            color: rgba(255, 0, 0, 1)
        &.plus
          td
            background-color: rgba(255, 255, 224, 1)
            border-top: solid 1px rgba(62, 62, 62, 1)
      td
        border-right: solid 1px rgba(62, 62, 62, 1)
        &:last-child
          border: none
        span.stats
          display: block
          padding: 0px 5px
        span.link
          &:hover
            background-color: rgba(255, 255, 190, 0.8)
            cursor: pointer
    tfoot
      tr
        td
          &:first-child
            border-top: solid 1px #000000
            padding-top: 0.5em
  span.info
    background:
      color: rgba(230, 255, 230, 1)
      image: image_url(unquote("icons/info.png"))
      position: 0.5em 0.5em
      repeat: no-repeat
    border-radius: 10px
    box-shadow: 0.5em 0.5em #3e3e3e
    padding: 0.5em 1em
    margin-bottom: 0.75em
    text-indent: 25px
    font-size: 0.9em
    display: block
  span.warning
    background:
      color: rgba(255, 204, 204, 1)
      image: image_url(unquote("icons/warning.png"))
      position: 0.5em 0.5em
      repeat: no-repeat
    border-radius: 10px
    box-shadow: 0.5em 0.5em #3e3e3e
    padding: 0.5em 1em
    margin-bottom: 0.75em
    text-indent: 25px
    font-size: 0.9em
    display: block
#relationsContainer
  border-radius: 5px
  box-shadow: 0.25em 0.25em #3e3e3e
  font-size: 12px
  position: fixed

